feat: add user ownership and transaction isolation